# Savant

./: .env.production  .gitignore  .markdownlint.json  .markdownlintignore  ALETHEIA_SCAN_PHASE_II_REPORT.md  AUDIT-REPORT.MD  AUDIT.md  BUILD-INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FID-COMPETITIVE-GAP-CLOSURE.MD  LICENSE  Makefile  README.md  TOMORROW.md  build.bat  check-monitors.ps1  clippy.toml  deny.toml  dev.bat  package-lock.json  package.json  progress.md  simple_start.rs  start.bat  start.js  start.sh  stop.js  update.md
.cargo/: config.toml
.github/: dependabot.yml
.learnings/: ERRORS.md
browser/: bookmarks.db-shm  bookmarks.db-wal  history.db-shm  history.db-wal
config/: savant.toml
crates/agent/: Cargo.toml
crates/agent/examples/: sovereign_manifest.rs
crates/agent/src/: budget.rs  context.rs  free_model_router.rs  lib.rs  manager.rs  react.rs  react_speculative.rs  streaming.rs  swarm.rs  watcher.rs
crates/agent/src/ensemble/: mod.rs
crates/agent/src/learning/: ald.rs  emitter.rs  filter.rs  mod.rs  parser.rs
crates/agent/src/memory/: mod.rs
crates/agent/src/nlp/: commands.rs  mod.rs
crates/agent/src/orchestration/: branching.rs  continuation.rs  dag.rs  handoff.rs  handoff_tests.rs  ignition.rs  mod.rs  synthesis.rs  tasks.rs
crates/agent/src/plugins/: wasm_host.rs  wasm_tools.rs
crates/agent/src/proactive/: mod.rs  perception.rs
crates/agent/src/prompts/: coding_foundation.md  mod.rs  perfection_loop.md  python.md  typescript.md
crates/agent/src/providers/: chain.rs  mgmt.rs  mod.rs
crates/agent/src/pulse/: audio.rs  delta.rs  heartbeat.rs  mod.rs  prompts.rs
crates/agent/src/react/: compaction.rs  events.rs  heuristic_tests.rs  mod.rs  reactor.rs  self_repair.rs  stream.rs
crates/agent/src/semantic_window/: scoring.rs  window.rs
crates/agent/src/tools/: coercion.rs  foundation.rs  librarian.rs  memory.rs  mod.rs  orchestration.rs  schema_validator.rs  settings.rs  shell.rs  web.rs  web_projection.rs
crates/agent/src/workspace/: broadcast.rs
crates/agent/tests/: production.rs
crates/browser/: Cargo.toml
crates/browser/src/: bookmarks.rs  browser_tool.rs  content_extractor.rs  control.rs  engine.rs  history.rs  lib.rs  types.rs
crates/channels/: Cargo.toml
crates/channels/src/: bluesky.rs  cli.rs  dingtalk.rs  discord.rs  email.rs  feishu.rs  generic_webhook.rs  google_chat.rs  irc.rs  lib.rs  line.rs  matrix.rs  mattermost.rs  nostr.rs  notion.rs  pool.rs  reddit.rs  signal.rs  slack.rs  teams.rs  telegram.rs  twitch.rs  voice.rs  wecom.rs  whatsapp.rs  whatsapp_business.rs  x.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cognitive/: Cargo.toml
crates/cognitive/src/: forge.rs  lib.rs  predictor.rs  synthesis.rs
crates/core/: Cargo.toml
crates/core/examples/: inspect_db.rs
crates/core/src/: bus.rs  config.rs  crypto.rs  db.rs  error.rs  heartbeat.rs  lib.rs  migration.rs  session.rs
crates/core/src/fs/: mod.rs  registry.rs
crates/core/src/hooks/: mod.rs
crates/core/src/learning/: schema.rs
crates/core/src/memory/: mod.rs
crates/core/src/net/: mod.rs
crates/core/src/nlp/: commands.rs  mod.rs
crates/core/src/pulse/: watchdog.rs
crates/core/src/storage/: fjall_engine.rs  mod.rs
crates/core/src/traits/: mod.rs
crates/core/src/types/: memory.rs  mod.rs
crates/core/src/utils/: embeddings.rs  io.rs  mod.rs  ollama_embeddings.rs  ollama_vision.rs  parsing.rs  time.rs
crates/core/tests/: perf_benchmarks.rs
crates/desktop/src-tauri/: Cargo.toml  diagnostic_run.md  tauri.conf.json
crates/desktop/src-tauri/capabilities/: default.json
crates/desktop/src-tauri/icons/: icon.icns
crates/desktop/src-tauri/src/: main.rs  paths.rs
crates/dream/: Cargo.toml
crates/dream/src/: filter.rs  lib.rs  nrem.rs  rem.rs  scheduler.rs
crates/echo/: Cargo.toml
crates/echo/src/: circuit_breaker.rs  compiler.rs  lib.rs  registry.rs  watcher.rs
crates/echo/tests/: circuit_breaker_tests.rs  speculative_tests.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: lanes.rs  lib.rs  persistence.rs  server.rs
crates/gateway/src/auth/: mod.rs  oauth.rs
crates/gateway/src/handlers/: mcp.rs  mod.rs  pairing.rs  setup.rs  skills.rs
crates/gateway/tests/: security_tests.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: blackboard.rs  collective.rs  lib.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: circuit.rs  client.rs  lib.rs  server.rs
crates/mcp/tests/: integration.rs
crates/memory/: Cargo.toml
crates/memory/ruvector.db/: vector
crates/memory/src/: arbiter.rs  async_backend.rs  daily_log.rs  distillation.rs  engine.rs  entities.rs  error.rs  lib.rs  lsm_engine.rs  models.rs  notifications.rs  promotion.rs  reflective.rs  safety.rs  vector_engine.rs
crates/memory/tests/: crash_recovery.rs  persistence.rs  stress.rs
crates/panopticon/: Cargo.toml
crates/panopticon/src/: lib.rs  replay.rs
crates/security/: Cargo.toml
crates/security/src/: attestation.rs  enclave.rs  lib.rs  proofs.rs  token.rs
crates/security/src/continuous/: circuit_breaker.rs  credentials.rs  taint.rs
crates/skills/: Cargo.toml
crates/skills/src/: clawhub.rs  discovery.rs  docker.rs  hot_reload.rs  lambda.rs  lib.rs  mount_security.rs  native.rs  nix.rs  parser.rs  security.rs
crates/skills/src/sandbox/: mod.rs  native.rs  wasm.rs
crates/skills/src/wasm/: mod.rs
crates/skills/tests/: docker_tests.rs
dashboard/: next.config.ts  package-lock.json  package.json
dev/: 3-20-26-transcript.md  AUDIT-REPORT.md  CHANGELOG-INTERNAL.md  DEV-FOLDER-SPECIFICATION.md  DEVELOPMENT-WORKFLOW.md  IMPLEMENT-HANDOFF-TOOLS.md  IMPLEMENTATION-TRACKER.md  LEARNINGS.md  Master-Gap-Analysis.md  PENDING.md  SAVANT-CODING-SYSTEM.md  SESSION-CONTINUATION.md  SESSION-SUMMARY.md  TOP-25-IDEAS.md  TOP-5-PRIORITY-IMPLEMENTATION.md  development-process.md  progress.md  verification-requirements.md
docs/: AUDIT-REPORT.md  AUTONOMOUS-WORKFLOW.md  Atlas-plan.md  Bridging AI Consciousness Gap.md  CHEATSHEET.md  memory.md  (+11 more)
skills/hello-savant/: Cargo.toml  SKILL.md
skills/hello-savant/src/: lib.rs
(+182 files in other folders)
