[workspace]
members = [
    "crates/core",
    "crates/gateway",
    "crates/agent",
    "crates/skills",
    "crates/mcp",
    "crates/channels",
    "crates/canvas",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
