[workspace]
members = [
    "crates/core",
    "crates/gateway",
    "crates/agent",
    "crates/skills",
    "crates/mcp",
    "crates/channels",
    "crates/canvas",
    "crates/cli",
    "crates/ipc",
    "crates/cognitive",
    "crates/memory", "crates/panopticon",
    "crates/security",
    "crates/echo",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
rusqlite = { version = "0.38.0", features = ["chrono"] }
futures = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["ws", "macros"] }
fjall = "3.1.0"
rkyv = { version = "0.8.15", features = ["bytecheck", "little_endian", "unaligned"] }
ruvector-core = "2.0.5"
bytecheck = "0.8.0"
rend = "0.5"
half = { version = "2.7", features = ["rand_distr"] }
savant_memory = { path = "crates/memory" }
dashmap = "6.1.0"
libc = "0.2"
num_cpus = "1.16"
lru = "0.12"

# Zero-Copy IPC (Atlas Step 4)
iceoryx2 = "0.8"
iceoryx2-bb = "0.8"
wasmtime = "36.0.6"
wasmtime-wasi = { version = "36.0.6", features = ["preview1"] }

# Cognitive Acceleration (Atlas Step 4)
ndarray = "0.15"
candle-core = "0.8.0"
candle-nn = "0.8.0"

# Utility
ctrlc = "3.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
hex = "0.4"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
