[package]
name = "savant_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
savant_skills = { path = "../skills" }
savant_mcp = { path = "../mcp" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = "0.5"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
rusqlite = "0.38.0"
notify = "8.2.0"
notify-debouncer-mini = "0.6.0"
anyhow = "1.0"
