[package]
name = "savant_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
savant_mcp = { workspace = true }
savant_ipc = { workspace = true }
savant_cognitive = { workspace = true }
savant_memory = { workspace = true }
savant_security = { workspace = true }
savant_echo = { workspace = true }
savant_gateway = { workspace = true }
savant_dream = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
zstd = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tiktoken-rs = "0.5"
regex = "1.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
scraper = "0.21"
futures = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
async-stream = "0.3"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dashmap = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "0.38.0", features = ["chrono"] }
notify = "8.2.0"
notify-debouncer-mini = "0.6.0"
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
sysinfo = "0.33"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dev-dependencies]
tempfile = "3.10"
