[package]
name = "savant_browser"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
savant_memory = { path = "../memory" }
savant_security = { path = "../security" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
uuid = { version = "1.0", features = ["v4", "serde"] }
base64 = "0.22"

[lints]
workspace = true
