[package]
name = "savant_channels"
version = "0.0.1"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
teloxide = "0.12"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
bb8 = "0.8"
futures = { workspace = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
dashmap = "6.0"
matrix-sdk = { version = "0.7", default-features = false, features = ["rustls-tls"] }
