[package]
name = "savant_cli"
version = "0.0.1"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
savant_gateway = { path = "../gateway" }
savant_agent = { path = "../agent" }
savant_skills = { path = "../skills" }
savant_mcp = { path = "../mcp" }
savant_channels = { path = "../channels" }
savant_canvas = { path = "../canvas" }
tokio = { workspace = true }
pqcrypto-dilithium = "0.5"
figment = { version = "0.10", features = ["env", "toml"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = { workspace = true }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
walkdir = "2.5"
