[package]
name = "savant_core"
version = "0.1.0"
edition = "2021"

[dependencies]
fastembed = "5.12.1"
notify = "8.2.0"
pulldown-cmark = "0.13.1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
thiserror = "1.0"
tokio-cron-scheduler = "0.15.1"
tracing = "0.1"
figment = { version = "0.10", features = ["toml", "env"] }
walkdir = "2.5"
blake3 = "1.5"
bytes = "1.10"
regex = "1.11"
tokio.workspace = true
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
toml = "0.8"
sha2 = "0.10"
dotenv = "0.15"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
signature = "2.0"
