[package]
name = "savant_gateway"
version = "0.0.1"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = "2.0"
rand = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = { workspace = true }
futures = "0.3"
dashmap = { workspace = true }
lru = { workspace = true }
hex = "0.4"
