[package]
name = "savant_gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
serde = { workspace = true }
serde_json = { workspace = true }
ed25519-dalek = "2.0"
rand = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = { workspace = true }
futures = "0.3"
dashmap = { workspace = true }
lru = { workspace = true }
hex = "0.4"
uuid = { version = "1.8", features = ["v4"] }
reqwest = { workspace = true }
backoff = { workspace = true }
blake3 = "1.5"
