[package]
name = "savant_ipc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
iceoryx2 = "0.8"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { workspace = true }
opentelemetry = { workspace = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util", "macros"] }
tracing-subscriber = "0.3"
