[package]
name = "savant_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { workspace = true }
savant_skills = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk" }
tokio = { workspace = true }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
async-trait = { workspace = true }
dashmap = { workspace = true }
url = "2.5"
