[package]
name = "savant_security"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
rkyv = { workspace = true }
bytecheck = { workspace = true }
blake3 = "1.5"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"

# [target.'cfg(kani)'.dependencies]
# kani = "0.45.0"
