[package]
name = "savant_security"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
rkyv = { workspace = true }
bytecheck = { workspace = true }
blake3 = "1.5"
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
rand = { workspace = true }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
savant_core = { path = "../core" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

# [target.'cfg(kani)'.dependencies]
# kani = "0.45.0"
