[package]
name = "savant_skills"
version = "0.1.0"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
wasmtime = "19.0"
wasmtime-wasi = { version = "19.0", features = ["preview1"] }
bollard = "0.16"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
pulldown-cmark = "0.10"
tracing = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
walkdir = "2.4"
uuid = { version = "1.22.0", features = ["v4"] }
