[package]
name = "savant_skills"
version = "0.0.1"
edition = "2021"

[dependencies]
savant_core = { path = "../core" }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
bollard = "0.16"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
pulldown-cmark = "0.10"
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
walkdir = "2.4"
uuid = { version = "1.22.0", features = ["v4"] }
async-trait = "0.1"
wassette = { git = "https://github.com/microsoft/wassette", branch = "main" }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
reqwest = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.3.0"
caps = "0.5.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }

[dev-dependencies]
wat = "1"
