[package]
name = "hello-savant"
version = "1.0.0"
edition = "2021"
description = "Hello Savant - Example skill demonstrating Savant skill development"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
