[package]
name = "savant-desktop"
version = "0.0.1"
edition = "2021"

[dependencies]
tauri = { version = "1.7", features = [ "api-all", "system-tray"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
savant_core = { workspace = true }
savant_agent = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
