[package]
name = "savant-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico"] }
tauri-plugin-updater = "2"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
savant_core = { workspace = true }
savant_agent = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
